lighttpd/lighttpd.conf: Add missing slash to prefix variable

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -1,4 +1,4 @@
-var.prefix = env.HOME + ".local"
+var.prefix = env.HOME + "/.local"
 var.vardir = var.prefix + "/var"
 var.logdir = var.vardir + "/log/lighttpd"
 var.etcdir = var.prefix + "/etc/lighttpd"
