Store files in their default location instead of relocating them
There’s simply no value in storing files under ~/.local/etc instead of ~.
Yes, it’d be real sweet if applications got this right and didn’t clutter
~ with a bunch of crap, but they’re not going to stop anytime soon.

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -1,7 +1,6 @@
-var.prefix = env.HOME + "/.local"
+var.prefix = env.HOME
 var.vardir = var.prefix + "/var"
-var.logdir = var.vardir + "/log/lighttpd"
-var.etcdir = var.prefix + "/etc/lighttpd"
+var.etcdir = var.prefix + "/.lighttpd"
 
 server.modules = (
     "mod_webdav",
@@ -11,8 +10,8 @@ server.modules = (
 #include "mime-types.conf"
 
 server.document-root = var.vardir + "/www"
-server.errorlog = var.logdir + "/error.log"
-server.pid-file = var.vardir + "/run/lighttpd/lighttpd.pid"
+server.errorlog = var.etcdir + "/error.log"
+server.pid-file = var.etcdir + "/lighttpd.pid"
 server.port = 3503
 
 ssl.engine = "enable"
