Rework rest of OS- and host-specific stuff

--- a/os/Makefile
+++ b/os/Makefile
@@ -1,4 +1,6 @@
 DOTFILES = \
-	   zsh/login/os
+	   zsh/login/os \
+	   zsh/profile/os \
+	   zsh/rc/os
 
 $(foreach file,$(DOTFILES),$(call FILE_template,$(or $(wildcard os/$(uname)/$(file)),os/$(file)),$(userconfdir)/.$(file)))
