--- a/host/Makefile
+++ b/host/Makefile
@@ -1,6 +1,6 @@
 host := $(shell hostname)
 
 DOTFILES = \
-	   zsh/rc/host
+	   zsh/host/rc
 
 $(foreach file,$(DOTFILES),$(call FILE_template,$(or $(wildcard host/$(host)/$(file)),host/$(file)),$(userconfdir)/.$(file)))
