Generate bin scripts for correct Zsh location

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 Environment
-bin/xdigraph
+bin/asciitable
+bin/backup-home
+bin/burn
+bin/clipboard
+bin/dfs
+bin/e
+bin/emv
+bin/index-disc
+bin/m
+bin/mem-map
+bin/pack
+bin/qf
+bin/sclipboard
+bin/terminal-colors
+bin/unpack
+bin/update-context
+bin/valgrind-ruby
+bin/vg
+bin/vgg
+bin/vimless
 config.mk
+xsession
 *.swp
