--- a/bin/terminal-colors.in
+++ b/bin/terminal-colors.in
@@ -1,4 +1,4 @@
-#! /bin/zsh
+#! @ZSHELL@
 # contents: Shows terminal colors using the echoti module for zsh(1).
 #
 # Copyright © 2004,2008 Nikolai Weibull <now@bitwi.se>
