Manage PATH on Windows

--- a/os/Cygwin/GHISLER/totalcmd.ini
+++ b/os/Cygwin/GHISLER/totalcmd.ini
@@ -14,7 +14,7 @@ CountMarked=0
 DirBrackets=0
 DirTabOptions=780
 DriveLib=%$APPDATA%\GHISLER\tango_shell32.dll
-Editor=sh "%HOME%/bin/edit-in-screen-vim"
+Editor=/bin/sh "%HOME%/bin/edit-in-screen-vim"
 FirstTime=0
 FirstTimeUnpack=0
 FirstTimeZIP=0
