Update Gems directories for Total Commander

--- a/os/Cygwin/GHISLER/work.ini
+++ b/os/Cygwin/GHISLER/work.ini
@@ -101,5 +101,10 @@ menu23=&Home
 cmd23=cd %$HOME%
 menu24=Regi&stry
 cmd24=cd \\\Registry
-menu25=&Gems
-cmd25=cd C:\Ruby18\lib\ruby\gems\1.8\gems
+menu25=-&Gems
+menu26=&Local
+cmd26=cd C:\Ruby19\lib\ruby\gems\1.9.1
+menu27=&Gothenburg
+cmd27=cd \\Filer\Programs\Ruby19\lib\ruby\gems\1.9.1
+menu28=&Norway
+cmd28=cd \\10.100.3.24\ames-ruby$\Ruby19\lib\ruby\gems\1.9.1
