--- a/bin/unpack.in
+++ b/bin/unpack.in
@@ -25,7 +25,7 @@ unpack () {
     (*.gz) gzip -d -- $1 ;;
     (*.bz2) bzip2 -d -- $1 ;;
     (*.rar) unrar x -c- -o+ -idq -- $1 ;;
-    (*.zip|*.jar) unzip -q -o $1 ;;
+    (*.zip|*.jar|*.oxt) unzip -q -o $1 ;;
     (*.Z) uncompress -f $1 ;;
     (*.7z) 7z x $1 ;;
     (*) zap/error "can't find a decompressor for file (unrecognized extension):" \
