Update Total Commander for new screen resolution

--- a/os/Cygwin/GHISLER/totalcmd.ini
+++ b/os/Cygwin/GHISLER/totalcmd.ini
@@ -455,6 +455,16 @@ ConnectDX=514
 ConnectDY=326
 ConnectMax=0
 
+[1080x1920 (8x16)]
+maximized=1
+FontName=Tahoma
+FontSize=8
+FontWeight=400
+FontNameWindow=Tahoma
+FontSizeWindow=8
+FontWeightWindow=400
+FontNameDialog=Tahoma
+
 [Lister]
 x=1845
 y=315
