--- a/bin/discogs-tags.in
+++ b/bin/discogs-tags.in
@@ -8,7 +8,7 @@ die () {
 }
 
 usage () {
-  print -r -- Usage: $application ID
+  print -r -- Usage: $application DIRECTORY ID
   exit 1
 }
 
@@ -58,7 +58,7 @@ clean-name () {
   print -r -- ${${${${${${(L):-$*}//[\/]/-}//(#b)[[:space:]]#\(([^\)]#)\)/-$match[1]}/ & / and }/&/ and }// /_}
 }
 
-(( $# > 1 )) || usage
+(( $# == 2 )) || usage
 directory=$1
 id=$2
 release=$(curl --compressed --silent --header 'Accept: application/xml' http://api.discogs.com/release/$id)
