--- a/bin/discogs-tags.in
+++ b/bin/discogs-tags.in
@@ -8,7 +8,7 @@ die () {
 }
 
 usage () {
-  print -r -- Usage: $application DIRECTORY ID
+  print -r -- "Usage: $application [-n] [-i] DIRECTORY ID"
   exit 1
 }
 
@@ -55,12 +55,59 @@ join-artist () {
 clean-name () {
   local -a match mbegin mend
 
-  print -r -- ${${${${${${(L):-$*}//[\/]/-}//(#b)[[:space:]]#\(([^\)]#)\)/-$match[1]}/ & / and }/&/ and }// /_}
+  print -r -- ${${${${${${${(L):-$*}//[\/]/-}//(#b)[[:space:]]#\(([^\)]#)\)/-$match[1]}/ & / and }/&/ and }// /_}//[?]}
 }
+
+differentimages=0
+local -A images
+xml-image () {
+  local uri=
+  case $2 in
+    (primary)
+      uri=$(xml $1 "(/resp/release/images/image[@type='primary'])[1]/@uri")
+      [[ -z $uri ]] && uri=$(xml $1 '/resp/release/images/image[1]/@uri')
+      ;;
+    (secondary)
+      uri=$(xml $1 "(/resp/release/images/image[@type='secondary' and preceding-sibling::image[1][@type='primary']])[1]/@uri")
+      ;;
+  esac
+  if [[ -n $uri ]]; then
+    local image=$(mktemp -t dti)
+    (( status == 0 )) || exit 1
+    trap 'rm -f $images; exit 130' INT
+    trap 'rm -f $images; exit 143' TERM
+    curl -L --compressed --silent --show-error $uri > $image
+    (( status == 0 )) || exit 1
+    images[$2]=$image
+  fi
+}
+
+precmd=
+
+while :; do
+  case $1 in
+    (-n)
+      precmd='print -r --'
+      ;;
+    (-i)
+      differentimages=1
+      ;;
+    (--)
+      break
+      ;;
+    (-*)
+      die 'invalid option: ' $1
+      ;;
+    (*)
+      break;;
+  esac
+  shift
+done
 
 (( $# == 2 )) || usage
 directory=$1
-id=$2
+[[ -d $directory ]] || die 'no such file or directory: ' $directory
+id=${2/http:\/\/(www.|)discogs.com\/([^\/]##\/|)release\/}
 release=$(curl --compressed --silent --header 'Accept: application/xml' http://api.discogs.com/release/$id)
 error=$(xml $release '/resp/error')
 if [[ -n $error ]]; then
@@ -76,19 +123,10 @@ location=$(xml $release /resp/release/country)
 xml-array genres $release /resp/release/styles/style
 xml-array positions $release /resp/release/tracklist/track/position
 xml-array-with-substituted-marks titles $release /resp/release/tracklist/track/title
-image_uri=$(xml $release '(/resp/release/images/image[@type="primary"])[1]/@uri')
-if [[ -z $image_uri ]]; then
-  image_uri=$(xml $release '/resp/release/images/image[1]/@uri')
-fi
-if [[ -n $image_uri ]]; then
-  image=$(mktemp -t dti)
-  (( status == 0 )) || exit 1
-  trap 'rm -f $image; exit 130' INT
-  trap 'rm -f $image; exit 143' TERM
-  curl -L --compressed --silent --show-error $image_uri > $image
-  (( status == 0 )) || exit 1
-fi
-files=($directory/[0-9]##.flac(Nn))
+xml-image $release primary
+(( differentimages )) && xml-image $release secondary
+
+files=($directory/*.flac(Nn))
 if (( $#files != $#positions )); then
   die $(printf 'Number of files in directory doesn’t match number of tracks at Discogs: %d != %d: %s: %s' $#files $#positions $directory http://www.discogs.com/release/$id)
 fi
@@ -102,23 +140,29 @@ fi
 # part.
 # TODO: We could have used DISCNUMBER+TRACKNUMBER to convert A1 to 1+1, but
 # Traktor doesn’t support DISCNUMBER.
-[[ -z $(xml $release /resp/release/tracklist/track/artists/artist/name) ]]; trackartists=$status
-if (( !trackartists )); then
+[[ -n $(xml $release /resp/release/tracklist/track/artists/artist/name) ]] && trackartists=y
+if [[ -z $trackartists ]]; then
   artists=($albumartists)
   albumartists=()
 fi
-[[ -z $(xml $release "/resp/release/tracklist/track/extraartists/artist[role='Remix']/name") ]]; trackmixartists=$status
+nmdbid=${${directory:t}%%[^0-9]*}
+local -a mixartists
+xml-artist-array mixartists $release "/resp/release/extraartists/artist[role='Remix' or role='Edited By']"
+[[ -n $(xml $release "/resp/release/tracklist/track/extraartists/artist[role='Remix' or role='Edited By']/name") ]] && trackmixartists=y
 for (( i = 1; i <= $#positions; i++ )); do
-  if (( trackartists )); then
+  if [[ -n $trackartists ]]; then
     xml-artist-array artists $release "/resp/release/tracklist/track[position='$positions[i]']/artists/artist"
     if (( $#artists == 0 )); then
       artists=($albumartists)
     fi
   fi
-  if (( trackmixartists )); then
-    xml-artist-array mixartists $release "/resp/release/tracklist/track[position='$positions[i]']/extraartists/artist[role='Remix']"
+  if [[ -n $trackmixartists ]]; then
+    xml-artist-array mixartists $release "/resp/release/tracklist/track[position='$positions[i]']/extraartists/artist[role='Remix' or role='Edited By']"
   fi
-  metaflac \
+  local image=
+  (( differentimages )) && [[ $positions[i] != [aA]* ]] && image=$images[secondary]
+  [[ -z $image ]] && image=$images[primary]
+  $=precmd metaflac \
     --remove-all-tags \
     --add-replay-gain \
     --set-tag=ALBUMARTIST=${^albumartists} \
@@ -135,12 +179,12 @@ for (( i = 1; i <= $#positions; i++ )); do
     --set-tag=TITLE=$titles[i] \
     --set-tag=MIXARTIST=${^mixartists} \
     --set-tag="DISCOGS RELEASE ID=$id" \
-    --set-tag="NMDB ID=$directory:t" \
-    --import-picture-from=$image \
+    --set-tag="NMDB ID=$nmdbid" \
+    ${image:+--import-picture-from=$image} \
     $files[i]
-  print -r -- mv $files[i] $(clean-name $positions[i]-${trackartists+$artists[1]-}$titles[i]).flac
+  local flac=$files[i]:h/$(clean-name $positions[i]-${trackartists:+$artists[1]-}$titles[i]).flac
+  [[ $files[i] -ef $flac ]] || $=precmd mv $files[i] $flac
 done
-print -r -- mv $directory $directory-$(clean-name $albumartists[1]-$album)
-if [[ -n $image ]]; then
-  rm $image
-fi
+local fulldirectory=$directory:h/$nmdbid-$(clean-name ${albumartists[1]:-$artists[1]}-$album)
+[[ $directory -ef $fulldirectory ]] || $=precmd mv $directory $fulldirectory
+rm -f $images
