Add links to Norway office

--- a/os/Cygwin/GHISLER/work.ini
+++ b/os/Cygwin/GHISLER/work.ini
@@ -108,3 +108,13 @@ menu27=&Gothenburg
 cmd27=cd \\Filer\Programs\Ruby19\lib\ruby\gems\1.9.1
 menu28=&Norway
 cmd28=cd \\10.100.3.24\ames-ruby$\Ruby19\lib\ruby\gems\1.9.1
+menu29=--
+menu30=-&Norway
+menu31=&Norway
+cmd31=cd \\10.100.3.22\cta-kunder$
+menu32=&Programs
+cmd32=cd \\10.100.3.24\ames-ruby$
+menu33=Pro&jects
+cmd33=cd \\10.100.3.22\cta-kunder$\Projects
+menu34=&Templates
+cmd34=cd \\10.100.3.22\cta-kunder$\Templates
