Fix tabstops for new screen

--- a/os/Cygwin/GHISLER/totalcmd.ini
+++ b/os/Cygwin/GHISLER/totalcmd.ini
@@ -22,7 +22,7 @@ IconLib=%$APPDATA%\GHISLER\tango.icl
 IconsOnNet=1
 IgnoreListFile=%$APPDATA%\GHISLER\tcignore.txt
 KeyPath=%$APPDATA%\GHISLER
-LanguageIni=%$APPDATA%\GHISLER\languages\wcmd_now.lng
+LanguageIni=wcmd_now.lng
 ListName=%$LOCAL_APPDATA%\GHISLER\ftplist.txt
 Mainmenu=%$APPDATA%\GHISLER\languages\wcmd_now.mnu
 PluginBaseDir=%$APPDATA%\GHISLER\plugins
@@ -464,6 +464,7 @@ FontNameWindow=Tahoma
 FontSizeWindow=8
 FontWeightWindow=400
 FontNameDialog=Tahoma
+Tabstops=342,669,669,-1,725,93
 
 [Lister]
 x=1845
