--- a/bin/backup-home.in
+++ b/bin/backup-home.in
@@ -28,6 +28,7 @@ dar_options+=(--prune .Spotlight-V100
               --prune .Trashes
               --prune .Xauthority
               --prune .adobe
+              --prune .agency9
               --prune .bash_history
               --prune .cache
               --prune .dropbox
@@ -40,14 +41,16 @@ dar_options+=(--prune .Spotlight-V100
               --prune .irb_history
               --prune .lesshst
               --prune .macports
+              --prune .parallel
               --prune .revdep-rebuild\*
               --prune .rnd
               --prune .ruby_inline
               --prune .sqlite_history
               --prune .terminfo
               --prune .thumbnails
-              --prune Documents/Native\ Instruments/Traktor\ 2.0.1/Backup
-              --prune Documents/Native\ Instruments/Traktor\ 2.0.1/Settings/Default\ Settings
+              --prune .yard
+              --prune Documents/Native\ Instruments/Traktor\ */Backup
+              --prune Documents/Native\ Instruments/Traktor\ */Settings/Default\ Settings
               --prune Dropbox
               --prune Library/Caches
               --prune Library/Application\ Support/CrashReporter
