Further adjustments to backup-home pruning

--- a/bin/backup-home.in
+++ b/bin/backup-home.in
@@ -49,8 +49,8 @@ dar_options+=(--prune .Spotlight-V100
               --prune .terminfo
               --prune .thumbnails
               --prune .yard
-              --prune Documents/Native\ Instruments/Traktor\ */Backup
-              --prune Documents/Native\ Instruments/Traktor\ */Settings/Default\ Settings
+              --prune Documents/Native\ Instruments/Traktor\ \*/Backup
+              --prune Documents/Native\ Instruments/Traktor\ \*/Settings/Default\ Settings
               --prune Dropbox
               --prune Library/Caches
               --prune Library/Application\ Support/CrashReporter
@@ -63,7 +63,9 @@ dar_options+=(--prune .Spotlight-V100
               --prune Library/Application\ Support/Firefox/Profiles/\*/downloads.sqlite
               --prune Library/Application\ Support/Google/Chrome
               --prune Library/Application\ Support/Google/Picasa3/cache
-              --prune Library/Application\ Support/audacity
+              --prune Library/Application\ Support/Google/Picasa3/bigthumbs_0.db
+              --prune Library/Application\ Support/Google/Picasa3/thumbs_2.db
+              --prune Library/Application\ Support/Preview
               --prune Library/Application\ Support/uTorrent/\*.old
               --prune Library/Application\ Support/uTorrent/\*.torrent
               --prune Library/Logs
@@ -73,6 +75,7 @@ dar_options+=(--prune .Spotlight-V100
               --prune Library/Safari
               --prune Library/Widgets
               --prune Projects/u/build/data/UnicodeData.marshalled
+              --prune Projects/u/build/data/NormalizationTest.txt
               --prune Projects/u/test/normalize.rb
               --prune cbt
               --prune opt
@@ -171,7 +174,8 @@ dar --create $filename $dar_options |& \
         /^ [0-9]* inode(s) ignored (excluded by filters)$/d
         /^ [0-9]* inode(s) recorded as deleted from reference backup$/d
         /^ Total number of inodes considered: [0-9]*$/d
-        /^ EA saved for [0-9]* inode(s)$/d' &&
- eval $(ssh-agent -s) > /dev/null &&
- { rsync -a $backupdest hanjin.dreamhost.com:;
-   kill $SSH_AGENT_PID; }
+        /^ EA saved for [0-9]* inode(s)$/d'
+        # &&
+# eval $(ssh-agent -s) > /dev/null &&
+# { rsync -a $backupdest hanjin.dreamhost.com:;
+#   kill $SSH_AGENT_PID; }
