--- a/bin/backup-home.in
+++ b/bin/backup-home.in
@@ -72,10 +72,13 @@ dar_options+=(--prune .Spotlight-V100
               --prune Library/Application\ Support/Google/Picasa3/synclog
               --prune Library/Application\ Support/Google/Picasa3/temp
               --prune Library/Application\ Support/Google/Picasa3/tmp
+              --prune Library/Application\ Support/MobileSync
               --prune Library/Application\ Support/Preview
               --prune Library/Application\ Support/uTorrent/\*.old
               --prune Library/Application\ Support/uTorrent/\*.torrent
               --prune Library/Gentoo
+              --prune Library/Google/GoogleSoftwareUpdate
+              --prune Library/iTunes/iPhone\ Software\ Updates
               --prune Library/Logs
               --prune Library/Preferences/Macromedia
               --prune Library/Preferences/SDMHelpData
