Update audacity configuration

--- a/audacity.cfg
+++ b/audacity.cfg
@@ -1,4 +1,9 @@
 PrefsVersion=1.1.1r1
+[AudioFiles]
+ShowId3Dialog=0
+[Export]
+MultipleFormat=WAV (Microsoft) signed 16 bit PCM
+TrackNameWithOrWithoutNumbers=numberAfter
 [GUI]
 ShowSplashScreen=0
 TracksFitVerticallyZoomed=1
