Use emacsclient from Total Commander

--- a/os/Cygwin/GHISLER/totalcmd.ini
+++ b/os/Cygwin/GHISLER/totalcmd.ini
@@ -14,7 +14,7 @@ CountMarked=0
 DirBrackets=0
 DirTabOptions=780
 DriveLib=%$APPDATA%\GHISLER\tango_shell32.dll
-Editor=/bin/sh "%HOME%/bin/edit-in-screen-vim"
+Editor=/bin/zsh -c '/bin/emacsclient --no-wait "$(/bin/cygpath -u "$(/bin/cygpath -ml $*)")"' e
 FirstTime=0
 FirstTimeUnpack=0
 FirstTimeZIP=0
