Rework mfedit to use Zsh always builtin

--- a/bin/mfedit.in
+++ b/bin/mfedit.in
@@ -6,12 +6,12 @@ fi
 
 local file=
 for file in $*; do
-  local tmp=$(mktemp -t mfe)
-  (( status == 0 )) || exit 1
-  trap "rm -f $tmp; exit 130" INT
-  trap "rm -f $tmp; exit 143" TERM
-  metaflac --export-tags-to=$tmp $file
-  ${EDITOR:-vi} $tmp
-  metaflac --remove-all-tags --import-tags-from=$tmp $file
-  rm -f $tmp
+  local tmp=; tmp=$(mktemp "$(dirname $file)/mfedit.XXXXXX") || exit 1
+  {
+    metaflac --export-tags-to=$tmp $file &&
+      ${EDITOR:-vi} $tmp &&
+      metaflac --remove-all-tags --import-tags-from=$tmp $file
+  } always {
+    rm -f $tmp
+  }
 done
