--- a/bin/discogs-tags.in
+++ b/bin/discogs-tags.in
@@ -72,12 +72,18 @@ xml-image () {
       ;;
   esac
   if [[ -n $uri ]]; then
-    local image=$(mktemp -t dti)
-    (( status == 0 )) || exit 1
+    [[ $2 = primary ]] && die 'missing primary image; upload one'
+    local image=; image=$(mktemp dti.XXXXXX) || exit 1
     trap 'rm -f $images; exit 130' INT
     trap 'rm -f $images; exit 143' TERM
-    curl -L --compressed --silent --show-error $uri > $image
-    (( status == 0 )) || exit 1
+    curl -L --compressed --silent --show-error $uri > $image || { rm -f $image; exit 1 }
+    local format=; format=$(identify -format %m $image) || exit 1
+    if [[ format != (JPEG|PNG) ]]; then
+      local jpeg=; jpeg=$(mktemp dti.jpeg.XXXXXX) || { rm -f $image; exit 1 }
+      convert $image jpg:- > $jpeg || { rm -f $image $jpeg; exit 1 }
+      rm -f $image
+      image=$jpeg
+    fi
     images[$2]=$image
   fi
 }
